# rust-load-balancer

./: .gitignore  BENCHMARKS.md  Cargo.toml  README.md  config.yaml
benchmarks/: common.sh  distribution.sh  failover.sh  lat_conn.sh  latency_percentiles.sh  throughput.sh
examples/: chaos_test.rs  test_backend.rs
scripts/: benchmark.sh  run_lb.sh  start.sh  start_backends.sh  visualize_benchmarks.py
src/: lib.rs  main.rs
src/circuit_breaker/: breaker.rs  mod.rs
src/config/: mod.rs  models.rs
src/health/: checker.rs  mod.rs  status.rs
src/load_balancer/: algorithm.rs  mod.rs  round_robin.rs  traits.rs
src/metrics/: collector.rs  mod.rs
src/proxy/: backend.rs  mod.rs  pool.rs  proxy.rs
src/retry/: mod.rs  strategy.rs
src/server/: builder.rs  handler.rs  listener.rs  mod.rs
tests/: integration_test.sh  load_balancer_tests.rs
