[package]
name = "rust-load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio   = { version = "1", features = ["full"] }
hyper   = { version = "0.14", features = ["full"] }   # enables hyper::server
tower   = { version = "0.4", features = ["util"] }    # ServiceExt (optional)
anyhow  = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
futures = "0.3"                                       # if I keep BoxFuture
thiserror = "1.0"